# rust-exercise-1-grpc

./: .env.example  Cargo.toml  README.md  build.rs
proto/: datamap.proto
src/: jsonfile.rs  main.rs  service.rs
src/proto/: datamap.rs  mod.rs
