[package]
name = "rust-exercise-1-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features =  [ "macros", "rt-multi-thread", "sync", "time", "signal", "fs" ] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.6"
